--- a/app/views/admin/_control-panel.html.haml
+++ b/app/views/admin/_control-panel.html.haml
@@ -4,8 +4,9 @@
   = main_link :for => :schools, :with => {:panels => {:middle => "#new-student", 
                                                       :right => "#new-teacher"}} 
 
-  = main_link :for => :courses, :with => {:panels => { :middle => '#vertical-selection', 
-                                                       :right => '#edit-syllabi-form' } }
+  = main_link :for => :courses, :with => {:panels => { :middle => '#edit-syllabi-form',
+                                                       :right => '#new-course' } }
+                                                       
 
   = main_link :for => :yardsticks
   = main_link :for => :account, :as => 'console', 
