#new-course is no longer a pop-up dialog

--- a/app/views/courses/_new.html.haml
+++ b/app/views/courses/_new.html.haml
@@ -1,5 +1,5 @@
 
-#new-course.new-entity.close-on-submit
+#new-course
   = semantic_form_for :course, :remote => true, :url => course_path do |f| 
     %div
       = f.inputs do 
