minor styling change

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -926,6 +926,7 @@ li {
   width: 100% ;
   padding: 0pt ;
   min-height: 150px ;
+  background: transparent ;
 
   > .swiss-knife {
     color: $my-blue ;
