Minor styling change

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -932,6 +932,7 @@ li {
     color: $my-blue ;
     margin-top: 4px ;
     border: none ;
+    font-size: 12px ;
   }
 
   > .swiss-knife.selected {
