--- a/app/views/verticals/_new.html.haml
+++ b/app/views/verticals/_new.html.haml
@@ -1,11 +1,9 @@
 
 #new-verticals.clear-after-submit
-  %legend
-    %span.target= "Verticals"
-    %span.operation= "Represent broad areas of study"
+  .form-title= "New Verticals"
   = semantic_form_for :vertical, :remote => true, :url => vertical_path do |f| 
     .submit-buttons
-      = submit_tag 'add verticals'
+      = submit_tag 'add verticals', :class => :right
 
     = f.inputs do 
       - [*1..5].each do |i|
