--- a/app/views/teachers/_new.html.haml
+++ b/app/views/teachers/_new.html.haml
@@ -1,8 +1,6 @@
 
 #new-teacher.clear-after-submit
-  %legend
-    %span.target= "Teacher"
-    %span.operation= "Quick Add"
+  %legend= "New Teacher"
   = semantic_form_for :teacher, :remote => true, :url => teacher_path do |f|
     .submit-buttons
       = submit_tag 'add new teacher'
