New logos - without the .com bit
Removed older, redundant logos

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
   %body 
     #viewport
       #company-logo
-        = image_tag("logo-v2-beta.png", alt: "gradians", id: "gradians_logo")
+        = image_tag("logo-mit-beta.png", alt: "gradians", id: "gradians_logo")
       #public-links
         %ul.no-bullets      
           = main_link :for => :main, :as => 'home', :href => root_path
