Minor styling change

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -955,7 +955,7 @@ li {
   > .swiss-knife {
     color: $my-blue ;
     margin-top: 4px ;
-    border: none ;
+    // border: none ;
     font-size: 12px ;
   }
 
