copyright on footer

--- a/app/views/welcome/_footer.html.haml
+++ b/app/views/welcome/_footer.html.haml
@@ -1,6 +1,6 @@
 #footer
   #copyright-notice
-    #copyright-validity.left= "www.gradians.com is best viewed using"
+    #copyright-validity.left= "Copyright © 2012 www.gradians.com is best viewed using"
     #firefox-icon.left.browser-icon
       = link_to 'Firefox 3.5+', 'http://www.mozilla.com/en-US/firefox/'
       = image_tag "firefox-gray.png"
