--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1071,7 +1071,9 @@ li {
 #question-options { 
   .scroll-content {
     input[type="button"] {
-      background-image: url('cog_16x16.png') no-repeat ;
+      background: url('cog_16x16.png') no-repeat scroll 0% 0% transparent ;
+      border:none ;
+      margin-right: 10px ;
     }
   }
 }
