--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1074,6 +1074,7 @@ li {
       background: url('cog_16x16.png') no-repeat scroll 0% 0% transparent ;
       border:none ;
       margin-right: 10px ;
+      cursor: pointer ;
     }
   }
 }
