[tweak]: Toggle image on favouriting/unfavouriting of questions ..

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1071,10 +1071,15 @@ li {
 #question-options { 
   .scroll-content {
     input[type="button"] {
-      background: url('cog_16x16.png') no-repeat scroll 0% 0% transparent ;
       border:none ;
       margin-right: 10px ;
       cursor: pointer ;
+    }
+    input[favourited="true"] {
+      background: url('favourited.png') no-repeat scroll 0% 0% transparent ;
+    }
+    input[favourited="false"] {
+      background: url('unfavourited.png') no-repeat scroll 0% 0% transparent ;
     }
   }
 }
