--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -205,6 +205,7 @@ p > a, div > a {
 
 .swiss-knife > .label {
   margin-left : 5px ;
+  font-variant: small-caps ;
 }
 
 .flipchart .submit-buttons {
@@ -954,9 +955,9 @@ li {
 
   > .swiss-knife {
     color: $my-blue ;
-    margin-top: 4px ;
-    // border: none ;
+    border-bottom: 1px solid $my-blue ;
     font-size: 12px ;
+    padding: 5px 0px 5px 0px ;
   }
 
   > .swiss-knife.selected {
