Changed favourite(d/s) to like(d/s) ..
Not only is the word like shorter, its spelling is also the same
in the UK and US systems. Plus, its meaning is implicitly understood
- thanks to Facebook

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1072,13 +1072,13 @@ li {
 #question-options { 
   .scroll-content {
     input[type="button"] {
-      background: url('unfavourited.png') no-repeat scroll 0% 0% transparent ;
+      background: url('unliked.png') no-repeat scroll 0% 0% transparent ;
       border:none ;
       margin-right: 10px ;
       cursor: pointer ;
     }
-    input[favourited="true"] {
-      background: url('favourited.png') no-repeat scroll 0% 0% transparent ;
+    input[liked="true"] {
+      background: url('liked.png') no-repeat scroll 0% 0% transparent ;
     }
   }
 }
