--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -14,10 +14,12 @@
     = form_tag course_questions_path, :remote => true, :method => :put do |f| 
       .submit-buttons
         .filters
-          = check_box_tag :skip_previously_used, true
-          = label_tag :skip_previously_used, "skip questions used before"
-          = check_box_tag :liked, true
-          = label_tag :liked, "only my favourites"
+          .filter
+            = check_box_tag :skip_previously_used, true
+            = label_tag :skip_previously_used, "skip questions used before"
+          .filter
+            = check_box_tag :liked, true
+            = label_tag :liked, "only my favourites"
         = submit_tag 'next', :class => :right
       .form-fields.as-accordion
   #question-options
