--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1093,9 +1093,9 @@ li {
   > .ui-widget-header {
     font-size: 14px ;
     text-transform : lowercase ;
-    color: white ;
+    color: $my-blue ;
   }
   .ui-widget-content {
-    color: $orange ;
+    color: white ;
   }
 }
