Minor change to filter label text

--- a/app/views/teachers/_buildquiz.html.haml
+++ b/app/views/teachers/_buildquiz.html.haml
@@ -19,7 +19,7 @@
             = label_tag :skip_previously_used, "skip questions used before"
           .filter
             = check_box_tag :liked, true
-            = label_tag :liked, "only my favourites"
+            = label_tag :liked, "liked by me"
         = submit_tag 'next', :class => :right
       .form-fields.as-accordion
   #question-options
