--- a/app/views/mailbot/welcome_email.html.haml
+++ b/app/views/mailbot/welcome_email.html.haml
@@ -1,6 +1,6 @@
 
 %h3= "Welcome to Gradians.com"
 %p
-  You can now login using the username and password below
-%p= "#{@account.email}"
-%p= "#{@password}"
+  You can now access the <b>trial</b> account using the login/username and password below
+%p
+  Username: "#{@account.email}"     Password: "#{@password}"
