More meat in the welcome mail

--- a/app/views/mailbot/welcome_email.html.haml
+++ b/app/views/mailbot/welcome_email.html.haml
@@ -1,6 +1,37 @@
 
-%h3= "Welcome to Gradians.com"
+%h3= "Thank you for registering with Gradians.com"
 %p
-  You can now access the <b>trial</b> account using the login/username and password below
+  Your <b>trial account</b> has been created and you can access it using the login
+  and password below
 %p
-  Username: "#{@account.email}"     Password: "#{@password}"
+  Username: #{@account.email}
+  Password: #{@password}
+%h4= "What can I do using the trial account?"
+%p
+  The trial account lets you experience the site before you decide to officially subscribe to it. 
+  And you can use the trial account for <b>as long as you want</b> before making the decision
+%p 
+  When you login, you will be provided with a sample syllabus and a sample class of students.
+  The syllabus has a little bit of calculus, a little algebra, a little geometry and so on. In all,
+  you will have access to some 60-odd questions with which to make quizzes for your sample class
+%p
+  To experience the site,
+  %ol
+    %li= "Login using the username and password above"
+    %li= "Make a quiz by picking topics in the sample syllabus"
+    %li 
+      Assign this quiz to students in the sample class. In the beginning, assign 
+      the quiz to just one student (see next point)
+    %li
+      Download and then printout the testpaper PDF. Pretend to be your own student
+      and write responses as a student would. To make the whole exercise a little 
+      more realistic, <b>make some intentional mistakes</b>
+    %li
+      Scan the testpaper and send it to using our downloadable scanning utility
+%p
+  And don't forget to watch our <b>video tutorials</b>. They cover all the steps 
+  described above
+%p
+  Needless to say, we are here to help as you try gradians.com out. Write to 
+  us on <b>help@gradians.com</b> in case you get stuck
+
