--- a/app/views/mailbot/grading_done.html.haml
+++ b/app/views/mailbot/grading_done.html.haml
@@ -1,6 +1,6 @@
 
 %p
-  This is to let you know that <b>#{@testpaper.name}</b> for quiz <b>#{@quiz.name}</b>
+  This is to let you know that testpaper <b>#{@testpaper.name}</b> for quiz <b>#{@quiz.name}</b>
   has been graded. The mean score - over the <b>#{@testpaper.student_ids.count}</b> student(s) - 
   is <b>#{@mean} percent</b>. You can view individual results for students by logging-in into your account
 %p
