dev changes for suggestion

--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -49,6 +49,9 @@
                  :with => {:panels => {:side => '#ungraded-responses', :wide => '#grading-canvas'}}
     = minor_link :for => 'db-slots', :as => 'add questions to db'
     = minor_link :for => 'new-scans', :as => 'get new scans'
+    = minor_link :for => 'suggestions', :as => 'suggestions', 
+                 :with => {:panels => {:side => '#unexamined-suggestions', :wide => '#'}}
+
 
   = form_tag questions_list_path, :method => :get, :remote => true, :class => 'right' do |f| 
     = semantic_fields_for :qsearch do |a|
