--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -23,6 +23,8 @@
     = render :partial => 'topics/controls'
     = render :partial => 'examiners/workbench'
     = render :partial => 'examiners/ungraded'
+    = render :partial => 'examiners/unexamined'
+    = render :partial => 'examiners/pending_suggestions'
     = render :partial => 'examiners/blockDbSlots'
 
     = render :partial => 'schools/admin-view'
