Numbered the steps in a flipchart ..
.. so that its easier for the user to know whether or not there something
before the first tab in the current view

--- a/app/views/examiners/_ungraded.html.haml
+++ b/app/views/examiners/_ungraded.html.haml
@@ -2,11 +2,11 @@
 #ungraded-responses.flipchart
   %ul
     %li
-      %a{ :href => '#pending-quizzes' }= "Quizzes"
+      %a{ :href => '#pending-quizzes' }= "1. Quizzes"
     %li
-      %a{ :href => '#pending-pages' }= "Pages"
+      %a{ :href => '#pending-pages' }= "2. Pages"
     %li
-      %a{ :href => '#pending-scans' }= "Scans"
+      %a{ :href => '#pending-scans' }= "3. Scans"
 
   #pending-quizzes
   #pending-pages
