--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -5,11 +5,11 @@
 #workbenches-summary.flipchart
   %ul
     %li
-      %a{ :href => '#examiner-untagged' }= "Question"
+      %a{ :href => '#examiner-untagged' }= "1. Question"
     %li
-      %a{ :href => '#topic-selection' }= "Topic"
+      %a{ :href => '#topic-selection' }= "2. Topic"
     %li
-      %a{ :href => '#misc-traits' }= "Tag Question"
+      %a{ :href => '#misc-traits' }= "3. Misc Tags"
   #examiner-untagged
   #topic-selection
     #tag-question-topics.as-accordion
