--- a/app/views/teachers/_assignquiz.html.haml
+++ b/app/views/teachers/_assignquiz.html.haml
@@ -2,13 +2,13 @@
 #quizzes-summary.flipchart
   %ul
     %li
-      %a{ :href => '#past-quizzes' }= "quizzes"
+      %a{ :href => '#past-quizzes' }= "1. Quizzes"
     %li
-      %a{ :href => '#sektion-list' }= "groups"
+      %a{ :href => '#sektion-list' }= "2. Groups"
     %li
-      %a{ :href => '#student-list' }= "students"
+      %a{ :href => '#student-list' }= "3. Students"
     %li
-      %a{ :href => '#assign-quiz-receipt' }= "summary"
+      %a{ :href => '#assign-quiz-receipt' }= "4. Summary"
 
   #past-quizzes
     #past-quizzes-list.as-accordion
