--- a/app/views/teachers/_reportcards.html.haml
+++ b/app/views/teachers/_reportcards.html.haml
@@ -2,11 +2,11 @@
 #report-cards-summary.flipchart
   %ul
     %li
-      %a{ :href => '#testpaper' }= "testpaper"
+      %a{ :href => '#testpaper' }= "1. Testpaper"
     %li
-      %a{ :href => '#student' }= "student"
+      %a{ :href => '#student' }= "2. Student"
     %li
-      %a{ :href => '#preview' }= "preview"
+      %a{ :href => '#preview' }= "3. Preview"
 
   #testpaper
   #student
