minor grammatical correction

--- a/app/views/mailbot/welcome_email.html.haml
+++ b/app/views/mailbot/welcome_email.html.haml
@@ -29,7 +29,7 @@
       and write responses as a student would. To make the whole exercise a little 
       more realistic, <b>make some intentional mistakes</b>
     %li
-      Scan the testpaper and send it to using our downloadable scanning utility.
+      Scan the testpaper and send it to us using our downloadable scanning utility.
       We will grade the papers and the reports would become available in your account
 %p
   There is <b>no limit</b> on how many times you can repeat the above cycle. 
