- most functionality to enable suggestion is incorporated - mailbot utility to send emails is missing, to be included in next commit

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1066,4 +1066,12 @@ li {
 
 #courses-summary { 
   margin-top: 53px ;
+}
+
+#suggestion {
+
+  #instruction {
+    color: $light-gray ;
+  }
+
 } 
