--- a/app/views/examiners/_blockDbSlots.html.haml
+++ b/app/views/examiners/_blockDbSlots.html.haml
@@ -14,7 +14,7 @@
   %p
     \... if you don't want to proceed, then click 'Cancel' below.
     But once the process starts, please do not 
-    close the dialog until it finishes. Surely you can wait for 5 seconds, right?
+    close the dialog until it finishes.
   .submit-buttons
     %input.left#btn-cancel{ :type => :button, :value => "Cancel"}
     %input.right#btn-submit{ :type => :button, :value => "Go ahead.." }
