--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -196,6 +196,11 @@ p > a, div > a {
   }
   color: white ;
   cursor: pointer ;
+
+  > a { 
+    color: $my-blue ;
+    margin-left: 5px;
+  } 
 } 
 
 .as-accordion .swiss-knife { /* when within an accordion */
