--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -197,11 +197,15 @@ p > a, div > a {
   color: white ;
   cursor: pointer ;
 
-  > a { 
-    color: $my-blue ;
-    margin-left: 5px;
-  } 
 } 
+
+#pending-quizzes {
+  a { 
+    color: $my-blue ;
+    font-size: 11px ;
+    float: right ;
+  } 
+}
 
 .as-accordion .swiss-knife { /* when within an accordion */
   min-height : 17px ;
