- included email messaging - link for download suggestion form

--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -4,4 +4,5 @@
   = main_link :for => 'yardsticks', :as => 'scoring scheme' 
   = main_link :for => 'report-cards', :as => 'report cards', :with => { :panels => {:wide => "#flot-chart" } }
   = main_link :for => :account, :as => 'account'
+  = main_link :for => 'suggestion', :as => 'suggestion form', :href => "#"
   = main_link :for => :logout, :href => "/logout", :dynamic => false
