--- a/app/views/examiners/_unexamined.html.haml
+++ b/app/views/examiners/_unexamined.html.haml
@@ -1,17 +1,17 @@
 
-#unexamined-suggestions.flipchart
+#pending-suggestions.flipchart
   %ul
     %li
-      %a{ :href => '#suggestions' }= "Suggestions"
+      %a{ :href => '#suggestions-from' }= "Teacher"
     %li
-      %a{ :href => '#suggestion' }= "Questions"
-  #suggestions
-  #suggestion      
+      %a{ :href => '#suggestion-scans' }= "Scans"
+  #suggestions-from
+  #suggestion-scans
     = semantic_form_for :suggestion, :remote => true, :url => suggestion_block_db_slots_path, :method => :post do |f|
       = f.inputs do
         = f.input :num_items, :as => :select, :include_blank => true, :label => '# of questions',
                   :collection => [*1..9], :wrapper_html => {:class => 'full-width'}
       .submit-buttons
         = submit_tag 'block slots'
-    #instruction Submitting this form will create the selected number of slots in the database.
+    .instructions= "Don't count sub-parts as separate questions!"
         
