--- a/app/views/layouts/examiner.html.haml
+++ b/app/views/layouts/examiner.html.haml
@@ -3,7 +3,7 @@
   #toolbox.hidden 
     = render :partial => 'examiners/workbench'
     = render :partial => 'examiners/ungraded'
-    = render :partial => 'examiners/unexamined'
+    = render :partial => 'examiners/pending_suggestions'
     = render :partial => 'examiners/blockDbSlots'
     = render :partial => 'toolbox/swiss_knife'
     = render :partial => 'toolbox/document_preview'
