--- a/app/views/toolbox/_swiss_knife.html.haml
+++ b/app/views/toolbox/_swiss_knife.html.haml
@@ -23,6 +23,7 @@
   %input.left{ :type => :checkbox, :class => :checkbox, :disabled => true, 
                :marker => "#{marker}", :name => "checked[#{marker}]" }  
   .label.left= "#{label}"
+  %a.link.left{:href => '#', :marker => '#', :parent => '#', :p_id => '#'}
   %div.micro-ticker.right
   %input.button.right{ :type => :button, :disabled => true }
   %select.right.difficulty.select{ :name => "difficulty[#{marker}]", :disabled => true, :type => :select}
