--- a/app/views/examiners/_workbench.html.haml
+++ b/app/views/examiners/_workbench.html.haml
@@ -47,9 +47,9 @@
   %ul.no-bullets
     = minor_link :for => 'grading', :as => 'scans to grade', 
                  :with => {:panels => {:side => '#ungraded-responses', :wide => '#grading-canvas'}}
-    = minor_link :for => 'db-slots', :as => 'add questions to db'
-    = minor_link :for => 'new-scans', :as => 'get new scans'
-    = minor_link :for => 'suggestions', :as => 'suggestions', 
+    = minor_link :for => 'db-slots', :as => 'new db slots'
+    = minor_link :for => 'new-scans', :as => 'receive scans'
+    = minor_link :for => 'suggestions', :as => 'typeset these', 
                  :with => {:panels => {:side => '#pending-suggestions', :wide => '#'}}
 
 
