--- a/app/views/students/_new.html.haml
+++ b/app/views/students/_new.html.haml
@@ -6,8 +6,8 @@
       = submit_tag 'add students'
 
     = f.inputs do 
-      = f.input :sektion, :label => 'section', :as => :select, :collection => [],
-                          :input_html => { :name => "sektion" }
+      = f.input :klass, :label => 'grade', :as => :select, :collection => [*9..12],
+                          :input_html => { :name => "klass" }
       - [*1..5].each do |i|
         = f.input :name, :input_html => {:name => "names[#{i}]", :id => "student_#{i}"}, 
                          :label => "student ##{i}"
