--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -10,6 +10,7 @@
     = render :partial => 'topics/new'
     = render :partial => 'verticals/new'
     = render :partial => 'teachers/new'
+    = render :partial => 'teachers/specialization'
     = render :partial => 'students/new'
     = render :partial => 'sektions/new'
     = render :partial => 'examiners/new'
@@ -33,7 +34,6 @@
     = render :partial => 'yardsticks/list'
     = render :partial => 'teachers/list'
     = render :partial => 'sektions/studentlist'
-    = render :partial => 'sektions/edit'
     = render :partial => 'sektions/radio_list'
   
     = render :partial => 'toolbox/swiss_knife'
