--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -13,6 +13,8 @@
     = render :partial => 'teachers/buildquiz'
     = render :partial => 'teachers/queue_status'
     = render :partial => 'teachers/reportcards'
+    = render :partial => 'teachers/students'
+    = render :partial => 'teachers/sektions'
 
     = render :partial => 'toolbox/pdf_viewer'
     = render :partial => 'toolbox/edit_account'
