--- a/app/views/schools/_controls.html.haml
+++ b/app/views/schools/_controls.html.haml
@@ -3,8 +3,8 @@
   %ul.no-bullets
     = minor_link :for => 'add-n-edit-school', :as => 'Add & Edit School', 
                  :with => {:panels => {:middle => '#new-school', :right => '#edit-school'} }
-    = minor_link :for => 'edit-roster', :as => 'Faculty Roster', 
-                 :with => { :panels => { :middle => '#teachers-list', :right => '#edit-student-klass-mapping'} },
+    = minor_link :for => 'edit-roster', :as => 'faculty',
+                 :with => { :panels => { :middle => '#teachers-list', :right => '#teacher-specialization' } },
                  :select_sth => true
     = minor_link :for => 'new-studygroups', :as => 'New Sections',
                  :with => { :panels => { :middle => '#new-studygroups' } },
