--- a/app/views/teachers/_control-panel.html.haml
+++ b/app/views/teachers/_control-panel.html.haml
@@ -3,5 +3,6 @@
   = main_link :for => 'quizzes', :default => true
   = main_link :for => 'yardsticks', :as => 'scoring scheme' 
   = main_link :for => 'report-cards', :as => 'report cards', :with => { :panels => {:wide => "#flot-chart" } }
-  = main_link :for => :account, :as => 'account'
+  = main_link :for => :account, :as => 'me & my sections', :with => { :panels => { :middle => "#my-sektions", 
+  :right => "#my-students" } }
   = main_link :for => :logout, :href => "/logout", :dynamic => false
