minor styling change

--- a/app/assets/stylesheets/gutenberg.css.scss
+++ b/app/assets/stylesheets/gutenberg.css.scss
@@ -1124,7 +1124,9 @@ li {
 }
 
 .list-item { 
-  width: 100% ; 
+  width: 95% ; 
   color: white ;
   font-size: 11px ;
+  margin-top: 5px ;
+  float: right ;
 } 
