First commit towards implementing an expanded definition of specialization ...
We will henceforth use a teacher's specialization to match her with sections
of students. This is needed because eventually teachers would be able to create
their own sections/groupings

--- a/app/views/teachers/_specialization.html.haml
+++ b/app/views/teachers/_specialization.html.haml
@@ -1,10 +1,13 @@
 
 #teacher-specialization
-  #specialization-chart.as-accordion 
-    - Subject.all.each do |sbj|
-      .scroll-heading{ :marker => "#{sbj.id}" }= "#{sbj.name}"
-      .scroll-content
-        - [*9..12].each do |grd|
-          .list-item
-            = check_box_tag "spl[#{sbj.id}][#{grd}]", true
-            = label_tag "spl[#{sbj.id}][#{grd}]", "Grade #{grd}"
+  = semantic_form_for :specialization, :remote => true, :url => update_specialization_path do |f|
+    .submit-buttons
+      = submit_tag 'update'
+    #specialization-chart.as-accordion 
+      - Subject.all.each do |sbj|
+        .scroll-heading{ :marker => "#{sbj.id}" }= "#{sbj.name}"
+        .scroll-content
+          - [*9..12].each do |grd|
+            .list-item
+              = check_box_tag "subject[#{sbj.id}][#{grd}]", true
+              = label_tag "subject[#{sbj.id}][#{grd}]", "Grade #{grd}"
