--- a/app/views/teachers/_specialization.html.haml
+++ b/app/views/teachers/_specialization.html.haml
@@ -8,6 +8,6 @@
         .scroll-heading{ :marker => "#{sbj.id}" }= "#{sbj.name}"
         .scroll-content
           - [*9..12].each do |grd|
-            .list-item
+            .list-item{ :marker => "#{grd}" }
               = check_box_tag "subject[#{sbj.id}][#{grd}]", true
               = label_tag "subject[#{sbj.id}][#{grd}]", "Grade #{grd}"
