Admin can now add upto 5 teachers at a time ..
We don't ask for the subjects the teacher teaches when creating new records.
That can always be done later by defining the specialization via the 'faculty' minor link

--- a/app/views/teachers/_new.html.haml
+++ b/app/views/teachers/_new.html.haml
@@ -3,9 +3,9 @@
   %legend= "New Teacher"
   = semantic_form_for :teacher, :remote => true, :url => teacher_path do |f|
     .submit-buttons
-      = submit_tag 'add new teacher'
+      = submit_tag 'add teachers'
 
     = f.inputs :name => :mandatory do 
-      = f.input :name, :input_html => { :name => "teacher[name]" }
-      = f.input :subjects, :label => 'teaches?', :as => :select, 
-                :collection => Subject.all, :include_blank => false, :multiple => true
+      - [*1..5].each do |i|
+        = f.input :name, :input_html => {:name => "names[#{i}]", :id => "teacher_#{i}"}, 
+                         :label => "teacher ##{i}"
